# stingray3d

./: main.cpp  meson.build  primitives.cpp
